Updated documentation (ready for stable)

--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -26,7 +26,7 @@
   <li>Implemented by-session content creation tools updates</li>
   <li>Added tabs editor (from admin)</li>
   <li>Added courses catalogue</li>
-  <li>Added a link to export courses in the "platform administrator -> courses list" entry (DT#4257)</li> 
+  <li>Added a link to export courses in the "platform administrator &gt; courses list" entry (DT#4257)</li> 
   <li>Added sessions history (optional access to previous sessions in read-only or read-write, for students)</li>
   <li>Added advanced search in sessions: you can also search by session name, session category, tutor and visibility. (DT#5541)</li>
   <li>Added an option to configure courses as "auto-registered" (every user has it in his courses list and is automatically subscribed)</li>
@@ -37,7 +37,7 @@
   <li>Added privacy for the chat tool in a sessions or groups context (DT#5558)</li>
   <li>Added possibility to view glossary terms in exercises and learning paths (courses)</li>
   <li>Reporting: notification of users who have never been active yet</li>
-  <li>Reporting: the additional user profile fields (defined by the platform administrator through platform administration > profiling) can now be shown in the reporting screens</li>
+  <li>Reporting: the additional user profile fields (defined by the platform administrator through platform administration &gt; profiling) can now be shown in the reporting screens</li>
   <li>Subscribing users in a course: you can now filter on addtional user profile fields when subscribing a user in a course (through user/subscribe_user.php) </li>
   <li>Definition of wiki pages as tasks for students is now possible</li> 
   <li>Added feedback to student wiki pages, synchronized with their progress in the task</li>
@@ -46,10 +46,10 @@
   <li>Added posibility to establish a max number of versions for each wiki page</li>
   <li>Improved control of concurrent users in wiki</li>
   <li>Improved the use of wiki pages such as student's portfolios (individual task)</li>
-  <li>Added an immediate redirection to the course after login when a user is enrolled only in one course (defined by the platform administrator through platform administration > configuration settings > training)- DT#3466</li>
+  <li>Added an immediate redirection to the course after login when a user is enrolled only in one course (defined by the platform administrator through platform administration &gt; configuration settings &gt; training)- DT#3466</li>
   <li>Added user's photo into users list interface - DT#5496</li>
   <li>Disabled trainer/tutor name field in create course form, set to current user's name by default. Can be modified into course settings - DT#5496 </li>
-  <li>Added option to export the training list to CSV in Administration > Training - DT#4256</li>
+  <li>Added option to export the training list to CSV in Administration &gt; Training - DT#4256</li>
   <li>Added user tags in social network - DT#5508</li>
   <li>Revamped "Who is online" look - DT#5490</li>
   <li>Added new search tool - DT#5610 </li>	
