--- a/documentation/index.html
+++ b/documentation/index.html
@@ -26,7 +26,7 @@
 <a href="installation_guide_es_ES.html">Spanish installation guide</a>
 <p> Are you interested in translating the installation guide to your own language? The best way to proceed is to ask us on the <a href="http://forum.chamilo.org">Chamilo forum</a>
 for the latest version – there may be updates to the guide since
-this version was released – and send new translations off to the <a href="mailto:translation@dokeos.com">translation@dokeos.com</a> email address. </p>
+this version was released – and send new translations off to the <a href="mailto:translation@chamilo.com">translation@chamilo.com</a> email address. </p>
 
 <h1>License</h1>
 <a href="license.html">GNU General Public License Version 2</a>
