--- a/documentation/readme.html
+++ b/documentation/readme.html
@@ -21,9 +21,9 @@
 <div id="main">
 <p>Chamilo is an elearning and course management web application,<br />
 
-      and is free software (GNU GPL). It's translated into 30 languages,<br />
+      and is free software (GNU/GPLv2). It's translated into more 30 languages,<br />
 
-      SCORM compliant, and light and flexible.</p>
+      SCORM compatible, light and flexible.</p>
 
 
 <p>Chamilo supports many different kinds of learning and collaboration activities.<br />
@@ -37,7 +37,7 @@
 
 <p>Technically, Chamilo is a web application written in PHP that stores data in a <br />
 
-      MySQL database. Users access it using a web browser.</p>
+      MySQL database. Users access it using a web browser. The first stable version of Chamilo, 1.8.6.2 Salto, is based on the Dokeos 1.8.6.1 code and is meant to be the next software step for institutions currently using Dokeos.</p>
 
 
 <p>If you would like to know more or help develop this software, please visit<br />
@@ -50,10 +50,12 @@
     Chamilo FREE imports Scorm 1.2 contents.<br />
 
     For more information on Scorm normalisation, see http://www.adlnet.org<br />
+    
+    Chamilo does not implement the full set of SCORM 1.2 specifications, as many are not mandatory. Check our website for more details.<br />
 
-<h1>Licence</h1>
+<h1>License</h1>
 
-<p>Chamilo is distributed under the GNU General Public license (GPL).<br />
+<p>Chamilo is distributed under the GNU General Public license (GNU/GPLv2).<br />
 
       Read the <a href="licence.html">GNU General Public license (GPL)</a> .</p>
 
@@ -90,45 +92,44 @@
       <li> Mac OS X 10.3</li>
 
 </ul>
+We officially recommend Debian and Ubuntu operating systems for their security, community and availability to the public.<br />
 
-<p>Email functions remain silent on systems where there is no mail sending software<br />
+<p>E-mail functions remain silent on systems where there is no mail sending software<br />
 
       (Sendmail, Postfix, Hamster...), which is the case by default on a Windows machine.</p>
 
 
 <h1>Interoperability</h1>
 
-<p>Chamilo imports Scorm compliant learning contents. It imports then "On the shelve"<br />
+<p>Chamilo imports SCORM 1.2 compliant learning contents. It imports then "On the shelve"<br />
 
-      contents from many companies : NETg, Skillsoft, Explio, Microsoft, Macromedia, etc.</p>
+ contents from many companies : NETg, Skillsoft, Explio, Microsoft, Macromedia, etc.</p>
 
 <p>Admin interface imports users through CSV and XML. You can create a CSV file from<br />
 
-      a list of users in MS Excel. OpenOffice can export to both CSV and XML formats.<br />
+      a list of users in MS-Excel. OpenOffice can export to both CSV and XML formats.<br />
 
       Many database management systems, like Oracle, SAP, Access, SQL-Server, LDAP ...<br />
 
       export to CSV and/or XML.</p>
 
-<p>Chamilo includes a LDAP module that allows admin to deactivate MySQL authentication<br />
+<p>Chamilo includes a LDAP module that allows admin to disable database authentication<br />
 
       and replace it by connection to a LDAP directory.</p>
 
 <p>Client side, Chamilo runs on any browser : Firefox, MS Internet Explorer (5.0+), Netscape (4.7+),<br />
 
-      Mozilla (1.2+), Safari, Opera, ...</p>
+      Mozilla (1.2+), Safari, Opera, ...<br />For better user experience, we recommend Firefox 3.5+ (you can download it freely from <a href="http://getfirefox.com">http://getfirefox.com</a>).</p>
 
 <h1>Chamilo.org</h1>
 
-<p>Chamilo is also a consulting company helping companies in their e-learning projects and selling Chamilo PRO and Chamilo MEDICAL.<br />
-      <br />
- <p>
-<em>Contact address</em>: <br />
-      Mail: <a href="mailto:info@chamilo.org">info@chamilo.org</a>
+<p>Chamilo is also an association, backed up by a network of private partners to help companies in their e-learning projects. This network also promotes professional versions of Chamilo, which include additional features and a complete package of services (see http://www.chamilo.org/providers for more details)</p>
+
+<p>
+<em>Association Contact address</em>: <br />
+Mail: <a href="mailto:info@chamilo.org">info@chamilo.org</a>
 </p>
-
 </div>
-
 </div>
 
 <hr />
