--- a/documentation/changelog.html
+++ b/documentation/changelog.html
@@ -25,7 +25,7 @@
 <ul>
   <li>Implemented by-session content creation tools updates</li>
   <li>Added tabs editor (from admin)</li>
-  <li>Added courses catalogue</li>
+  <li>Added course catalogue</li>
   <li>Added a link to export courses in the "platform administrator &gt; courses list" entry (DT#4257)</li> 
   <li>Added sessions history (optional access to previous sessions in read-only or read-write, for students)</li>
   <li>Added advanced search in sessions: you can also search by session name, session category, tutor and visibility. (DT#5541)</li>
@@ -70,8 +70,8 @@
   <li>Added list of students who have not submitted an assignment yet, and  the possibility to send them a reminder by email - BT#487 BT#489</li>
   <li>Added new question type in exercise tool: Multiple answer combination a.k.a "Exact answer" - CT#402</li>
   <li>Added e-mail notifications when a student answers an exercise</li>
-  <li>Added iepngfix hack to support png images in IE6</li>
-  <li>Added extensible footer style, allowing for much more information to be shown there</li>   
+  <li>Added extensible footer style, allowing for much more information to be shown there</li> 
+  <li>List of course improved when using Course categories in user_portal.php </li>
 </ul>   
 
 <h3>Debugging</h3>
@@ -89,6 +89,7 @@
 <ul>
   <li>New Chamilo themes added</li>
   <li>Fixed older styles support</li>
+  <li>Added iepngfix hack to support png images in IE6</li>
   <li>Changed footer to allow for extensible height</li>
   <li>Added many CSS elements to support new tools (social network, glossary, etc)</li>
 </ul>
@@ -98,7 +99,6 @@
   <li>Scorm: Objectives and interactions are not supported</li>
   <li>Scorm: Hotspot and Exact type of questions can't be exported in a SCORM package</li>
   <li>Course backup: When trying to generate a backup the image/video paths are not update with the new course code see CT#521</li>
-  <li>Fckeditor in fullscreen mode does not work in the new Chamilo theme</li>
   <li>If the "Show glossary terms" option is selected for the lessons tool (SCORM) and exercises, the description of the exercise might contain the answers to the question. Need human intelligence to avoid this.</li>
 </ul>
 
