Documentation: Add mention of removal of previous stylesheets in changelog

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -90,6 +90,7 @@
         <li>Blogs: The blogs tool is not available. It might be included again in future versions, but there were too many changes required to include it in v2.0.</li>
         <li>Dropbox: The dropbox tool is not available. It might be included again in future versions, but there were too many changes required to include it in v2.0.</li>
         <li>Global: Sub-folder mode: Chamilo 2 will not support being installed in a sub-folder. Nowadays, defining a subdomain has become very easy and provides higher security and more configuration flexibility, and supporting sub-folders is a complex task.</li>
+        <li>Display: Upon migration, the stylesheets are reset to the default Chamilo stylesheet. You will have to redesign your stylesheets using the stylesheets tool in the admin UI.</li>
     </ul>
 
     <h3>Known issues</h3>
