Documentation: Add precision to commit syntax specs in changelog's footer

--- a/public/documentation/changelog.html
+++ b/public/documentation/changelog.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="version" aria-label="2.0">
-    <a id="2.0"></a>
+    <a id="2.0-alpha.1"></a>
 
     <h1>Chamilo 2.0 alpha 1 - [release name not defined],  2024-07-05</h1>
     <h3>Release notes - summary</h3>
@@ -64,7 +64,8 @@
 </div>
 <div class="syntax-description">
     <h2>Syntax and terminology</h2>
-    <p>To ensure this changelog is the most useful, we are using a specific syntax and terms for this changelog, provided below:</p>
+    <p>To ensure this changelog is the most useful, we are using a specific syntax and terms for this changelog, provided below.<br />>
+    Also, this changelog, to the exception of security fixes, only contains elements that have an impact on users. Sysadmins and developers are invited to use git log to find any specific change.</p>
     <h3>Versions</h3>
     <div>
         Each version is shortly described, with:
