Documentation: Revert renaming installation guide. Use legacy name installation_guide.html to be semantically more explicit *and* avoid renaming x language variable which contain the filename

--- a/public/documentation/index.html
+++ b/public/documentation/index.html
@@ -33,7 +33,7 @@
     <h1>Chamilo 2.x - Documentation</h1>
     <ul>
         <li>
-            <a href="install.html">Installation guide (EN)</a>
+            <a href="installation_guide.html">Installation guide (EN)</a>
         </li>
         <li>
             <a href="https://docs.chamilo.org/">Manuals for teachers, admins and developers (several languages available through menu)</a>
